[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/npcs/NPC_Ball.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/balls/ball_0.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/balls/shadow.png" type="Texture" id=3]
[ext_resource path="res://Ball/bounce_zone.tres" type="Shape2D" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="Animation" id=2]
resource_name = "spin_left"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin_none"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Ball" type="Area2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin_left = SubResource( 2 )
anims/spin_none = SubResource( 3 )
anims/spin_right = SubResource( 4 )

[node name="BounceZones" type="Node2D" parent="."]

[node name="Top" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Top"]
position = Vector2( 0, -13.5 )
shape = ExtResource( 4 )

[node name="Right" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Right"]
position = Vector2( 6.5, -7 )
rotation = 1.5708
shape = ExtResource( 4 )

[node name="Bottom" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Bottom"]
position = Vector2( 0, -0.5 )
shape = ExtResource( 4 )

[node name="Left" type="Area2D" parent="BounceZones"]

[node name="Shape" type="CollisionShape2D" parent="BounceZones/Left"]
position = Vector2( -6.5, -7 )
rotation = 1.5708
shape = ExtResource( 4 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[connection signal="area_entered" from="." to="." method="_on_Ball_area_entered"]
[connection signal="area_entered" from="BounceZones/Top" to="." method="_on_Top_area_entered"]
[connection signal="area_entered" from="BounceZones/Right" to="." method="_on_Right_area_entered"]
[connection signal="area_entered" from="BounceZones/Bottom" to="." method="_on_Bottom_area_entered"]
[connection signal="area_entered" from="BounceZones/Left" to="." method="_on_Left_area_entered"]
